Add newsfeed entries for photos added to albums